added entities, screens, sample data

--- a/src/main/resources/com/sample/drivers/messages_en.properties
+++ b/src/main/resources/com/sample/drivers/messages_en.properties
@@ -2,6 +2,24 @@ localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+com.sample.drivers.entity/Document=Document
+com.sample.drivers.entity/Document.driver=Driver
+com.sample.drivers.entity/Document.id=Id
+com.sample.drivers.entity/Document.type=Type
+com.sample.drivers.entity/DocumentType=Document type
+com.sample.drivers.entity/DocumentType.INSURANCE=Insurance
+com.sample.drivers.entity/DocumentType.LICENSE=License
+com.sample.drivers.entity/DocumentType.PASSPORT=Passport
+com.sample.drivers.entity/Driver=Driver
+com.sample.drivers.entity/Driver.birthDate=Birthdate
+com.sample.drivers.entity/Driver.documents=Documents
+com.sample.drivers.entity/Driver.firstName=First name
+com.sample.drivers.entity/Driver.id=Id
+com.sample.drivers.entity/Driver.lastName=Last name
+com.sample.drivers.entity/Driver.license=License
+com.sample.drivers.entity/LicenseInfo=License info
+com.sample.drivers.entity/LicenseInfo.expiryDate=Expiry date
+com.sample.drivers.entity/LicenseInfo.number=License number
 com.sample.drivers.entity/User=User
 com.sample.drivers.entity/User.active=Active
 com.sample.drivers.entity/User.email=Email
@@ -12,6 +30,12 @@ com.sample.drivers.entity/User.password=Password
 com.sample.drivers.entity/User.timeZoneId=Time zone
 com.sample.drivers.entity/User.username=Username
 com.sample.drivers.entity/User.version=Version
+
+com.sample.drivers.screen.document/documentEdit.caption=Edit document
+
+com.sample.drivers.screen.driver/driverBrowse.caption=Drivers
+com.sample.drivers.screen.driver/driverBrowse.menu=Drivers
+com.sample.drivers.screen.driver/driverEdit.caption=Driver editor
 
 com.sample.drivers.screen.login/badCredentials = Unknown login name or bad password
 com.sample.drivers.screen.login/caption = Drivers application
