--- a/src/main/resources/com/sample/drivers/messages_en.properties
+++ b/src/main/resources/com/sample/drivers/messages_en.properties
@@ -1,9 +1,11 @@
 localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
+photo=
 
 com.sample.drivers.entity/Document=Document
 com.sample.drivers.entity/Document.driver=Driver
+com.sample.drivers.entity/Document.fileRef=File ref
 com.sample.drivers.entity/Document.id=Id
 com.sample.drivers.entity/Document.type=Type
 com.sample.drivers.entity/DocumentType=Document type
@@ -17,6 +19,7 @@ com.sample.drivers.entity/Driver.firstName=First name
 com.sample.drivers.entity/Driver.id=Id
 com.sample.drivers.entity/Driver.lastName=Last name
 com.sample.drivers.entity/Driver.license=License
+com.sample.drivers.entity/Driver.photo=Photo
 com.sample.drivers.entity/LicenseInfo=License info
 com.sample.drivers.entity/LicenseInfo.expiryDate=Expiry date
 com.sample.drivers.entity/LicenseInfo.number=License number
@@ -36,6 +39,7 @@ com.sample.drivers.screen.document/documentEdit.caption=Edit document
 com.sample.drivers.screen.driver/driverBrowse.caption=Drivers
 com.sample.drivers.screen.driver/driverBrowse.menu=Drivers
 com.sample.drivers.screen.driver/driverEdit.caption=Driver editor
+com.sample.drivers.screen.driver/photoField.caption=Photo field caption
 
 com.sample.drivers.screen.login/badCredentials = Unknown login name or bad password
 com.sample.drivers.screen.login/caption = Drivers application
